--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "sass": "sass --no-source-map --style=compressed src/sass/styles.scss:src/css/styles.css",
     "watch:eleventy": "eleventy --serve",
+    "watch:sass": "npm run sass -- --watch",
     "start": "npm-run-all sass --parallel watch:*",
     "build": "npm run sass && eleventy"
   },
