--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "dependencies": {
     "liquid": "^5.1.1",
     "liquidjs": "^9.20.1",
-    "sass": "^1.32.5"
+    "sass": "^1.32.5",
+    "slugify": "^1.4.6"
   }
 }
